--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
     </section> -->
 
-    <section name="carrousel">
+    <section name="carrousel" class="carousel-wrappers">
         <div id="myCarousel" class="carousel slide" data-ride="carousel"> -->
             <!-- Indicators -->
             <ol class="carousel-indicators">
