--- a/index.html
+++ b/index.html
@@ -135,16 +135,25 @@
             <div class="carousel-inner">
                 <div class="item active">
                     <img src="sources/medias/4manholdinghands.PNG" alt="Los Angeles">
+                    <button>
+                        DONNER
+                    </button>
                 </div>
 
                 <div class="item">
                     <img src="sources/medias/image_article_jmartel_livre_20240709-731x1118.png" alt="Chicago">
+                    <button>
+                        DONNER
+                    </button>
                 </div>
 
                 <div class="item">
                     <img src="sources/medias/image_carnet_droit_humain_generique_20231006-448x448.png" alt="New York">
+                    <button>
+                        DONNER
+                    </button>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Left and right controls -->
             <a class="left carousel-control" href="#myCarousel" data-slide="prev">
