--- a/index.html
+++ b/index.html
@@ -331,6 +331,18 @@
                     </button>
                 </div>
             </div>
+            <div class="footer-wrapper__partner">
+                <h1>Nos Partenaire</h1>
+                <img src="sources/medias/partners/casifq.png" alt="casifq">
+                <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
+                <img src="sources/medias/partners/coalitionaidejuridique.png">
+                <img src="sources/medias/partners/fidh.jpg">
+                <img src="sources/medias/partners/iclmg-csilc.jpg">
+                <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
+                <img src="sources/medias/partners/osp.png">
+                <img src="sources/medias/partners/rodcd_logo.png">
+                <img src="sources/medias/partners/rqaca.png">
+            </div>
         </footer>
         <!-- Swiper JS -->
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
