--- a/index.html
+++ b/index.html
@@ -331,8 +331,10 @@
                     </button>
                 </div>
             </div>
+        </footer>
+        <footer>
+            <h1>Nos Partenaire</h1>
             <div class="footer-wrapper__partner">
-                <h1>Nos Partenaire</h1>
                 <img src="sources/medias/partners/casifq.png" alt="casifq">
                 <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
                 <img src="sources/medias/partners/coalitionaidejuridique.png">
