--- a/index.html
+++ b/index.html
@@ -288,6 +288,20 @@
             </div>
         </div>
     </footer>
+    <footer>
+        <h1>Nos Partenaire</h1>
+        <div class="footer-wrapper__partner">
+            <img src="sources/medias/partners/casifq.png" alt="casifq">
+            <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
+            <img src="sources/medias/partners/coalitionaidejuridique.png">
+            <img src="sources/medias/partners/fidh.jpg">
+            <img src="sources/medias/partners/iclmg-csilc.jpg">
+            <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
+            <img src="sources/medias/partners/osp.png">
+            <img src="sources/medias/partners/rodcd_logo.png">
+            <img src="sources/medias/partners/rqaca.png">
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="main.js"></script>
 </body>
