--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <link rel="stylesheet"
     href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
-
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -304,6 +303,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="main.js"></script>
+    <script src="swiper.js"></script>
 </body>
 
 </html>
