--- a/index.html
+++ b/index.html
@@ -236,8 +236,6 @@
         </div>
    </section>
 
-
-    
     <a href="https://github.com/TheBoyzs/droits-et-libertes-the-boyzs/tree/main">Lien vers le repo Github</a>
     <script src="main.js"></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
@@ -288,7 +286,7 @@
         </div>
     </footer>
     <footer>
-        <h1>Nos Partenaire</h1>
+        <h1>LDL et nos Partenaires</h1>
         <div class="footer-wrapper__partner">
             <img src="sources/medias/partners/casifq.png" alt="casifq">
             <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
