--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <section name="swiper">
         <div class="swiper">
             
             <div class="swiper-wrapper">
