made the navbar a bit bigger

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                     <h4>Haine et panique morale au croisement de la transphobie et de la domination adulte.</h4>
                     <h5>27 août 2024 | Lettre ouverte</h5>
                 </div>
-            </article>
+            </article><br>
+            <button>Voir plus</button>
     </section>
     <section style="background-color: white;">
         <h1>Nos luttes</h1>
