ajout de 3 nouvelles pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <nav class="navbar-bottom">
             <ul class="nav-links">
-                <li><a href="#">LUTTES</a></li>
+                <li><a href="luttes.html">LUTTES</a></li>
                 <li><a href="#">ÉQUIPE</a></li>
                 <li><a href="#">NOUVELLES</a></li>
                 <li><a href="#">À PROPOS</a></li>
@@ -69,7 +69,7 @@
                     <input type="text" placeholder="  RECHERCHER">
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#">LUTTES</a></li>
+                    <li><a href="luttes.html">LUTTES</a></li>
                     <li><a href="#">ÉQUIPE</a></li>
                     <li><a href="#">NOUVELLES</a></li>
                     <li><a href="#">À PROPOS</a></li>
@@ -106,11 +106,6 @@
           
         </div>
     </section>
-
-
-
-
-
     <section name="carrousel">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -257,8 +252,8 @@
         </div>
         <div>
             <ul class="footer-wrapper__links">
-                <li><a link="#">Accueil</a></li>
-                <li> <a link="#">Luttes</a></li>
+                <li><a link="index.html">Accueil</a></li>
+                <li> <a link="luttes.html">Luttes</a></li>
                 <li><a link="#">Équipe</a></li>
                 <li><a link="#">Nouvelles</a></li>
                 <li><a link="#">À Propos</a></li>
