more pages added
- faq.html
- contact.html
- about.html

deez nutz

--- a/news.html
+++ b/news.html
@@ -52,11 +52,11 @@
         <nav class="navbar-bottom">
             <ul class="nav-links">
                 <li><a href="luttes.html">LUTTES</a></li>
-                <li><a href="#">ÉQUIPE</a></li>
+                <li><a href="teams.html">ÉQUIPE</a></li>
                 <li><a href="news.html">NOUVELLES</a></li>
-                <li><a href="#">À PROPOS</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="about.html">À PROPOS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </nav>
 
@@ -69,7 +69,7 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="luttes.html">LUTTES</a></li>
-                    <li><a href="#">ÉQUIPE</a></li>
+                    <li><a href="teams.html">ÉQUIPE</a></li>
                     <li><a href="news.html">NOUVELLES</a></li>
                     <li><a href="#">À PROPOS</a></li>
                     <li><a href="#">CONTACT</a></li>
@@ -101,11 +101,11 @@
             <ul class="footer-wrapper__links">
                 <li><a link="index.html">Accueil</a></li>
                 <li> <a link="luttes.html">Luttes</a></li>
-                <li><a link="#">Équipe</a></li>
+                <li><a link="teams.html">Équipe</a></li>
                 <li><a link="news.html">Nouvelles</a></li>
-                <li><a link="#">À Propos</a></li>
-                <li><a link="#">Contant</a></li>
-                <li><a link="#">FAQ</a></li>
+                <li><a link="about.html">À Propos</a></li>
+                <li><a link="contact.html">Contant</a></li>
+                <li><a link="faq.html">FAQ</a></li>
             </ul>
             <hr>
             <div class="footer-wrapper__legal">
