--- a/teams.html
+++ b/teams.html
@@ -54,9 +54,9 @@
                 <li><a href="luttes.html">LUTTES</a></li>
                 <li><a href="teams.html">ÉQUIPE</a></li>
                 <li><a href="news.html">NOUVELLES</a></li>
-                <li><a href="#">À PROPOS</a></li>
-                <li><a href="#">CONTACT</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="about.html">À PROPOS</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </nav>
 
@@ -103,9 +103,9 @@
                 <li> <a link="luttes.html">Luttes</a></li>
                 <li><a link="teams.html">Équipe</a></li>
                 <li><a link="news.html">Nouvelles</a></li>
-                <li><a link="#">À Propos</a></li>
-                <li><a link="#">Contant</a></li>
-                <li><a link="#">FAQ</a></li>
+                <li><a link="about.html">À Propos</a></li>
+                <li><a link="contact.html">Contant</a></li>
+                <li><a link="faq.html">FAQ</a></li>
             </ul>
             <hr>
             <div class="footer-wrapper__legal">
@@ -145,4 +145,3 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="main.js"></script>
     </body>
-    </html>
