--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
         <nav class="navbar-bottom">
             <ul class="nav-links">
+                <li><a class="active" href="index.html">ACCUEIL</a></li>
                 <li><a href="#">LUTTES</a></li>
                 <li><a href="#">ÉQUIPE</a></li>
                 <li><a href="#">NOUVELLES</a></li>
@@ -171,7 +172,9 @@
                     <h4>Haine et panique morale au croisement de la transphobie et de la domination adulte.</h4>
                     <h5>27 août 2024 | Lettre ouverte</h5>
                 </div>
+                
             </article><br>
+        </div>
             <button>Voir plus</button>
     </section>
     <section style="background-color: white;">
