--- a/index.html
+++ b/index.html
@@ -300,9 +300,8 @@
             <img src="sources/medias/partners/rqaca.png">
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="main.js"></script>
-    <script src="swiper.js"></script>
+    <script type="module" src="swiper.js" ></script>
 </body>
 
 </html>
