ajustement dossier swiper

--- a/index.html
+++ b/index.html
@@ -263,9 +263,10 @@
             </div>
         </div>
     </footer>
-    
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="swiper.js" ></script>
     <script src="main.js"></script>
-    <script type="module" src="swiper.js" ></script>
+    
 </body>
 
 </html>
