liens  des images absolu en relatif

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input type="text" placeholder="  RECHERCHER">
             </div>
 
-            <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+            <img class="logo" src="sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
 
             <div class="navbar-top__buttons">
                 <button class="cta-button secondary">S'INFORMER</button>
@@ -64,7 +64,7 @@
 
         <div class="mobile-menu-overlay">
             <div class="mobile-menu-content">
-                <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+                <img class="logo" src="sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
                 <div class="searchbar">
                     <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                     <input type="text" placeholder="  RECHERCHER">
