--- a/pages/faq.html
+++ b/pages/faq.html
@@ -10,20 +10,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="icon" type="image/x-icon" href="/sources/medias/ldl-icone.ico">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-    href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css />
+    <link rel="stylesheet" href="/styles.css">
 </head>
+
 <body>
     <div class="disclaimer" id="disclaimer">
         <p>Ce site est un une refonte dans le contexte d'un projet étudiant.
             <strong><a href="https://liguedesdroits.ca/">Consulter le site original</a></strong>
-            
+
         </p>
         <i class="fa-solid fa-x fa-2x" id="disclaimer-close"></i>
     </div>
@@ -34,7 +34,7 @@
                 <input type="text" placeholder="  RECHERCHER">
             </div>
 
-            <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+            <img class="logo" src="/sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
 
             <div class="navbar-top__buttons">
                 <button class="cta-button secondary">S'INFORMER</button>
@@ -62,7 +62,7 @@
 
         <div class="mobile-menu-overlay">
             <div class="mobile-menu-content">
-                <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+                <img class="logo" src="/sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
                 <div class="searchbar">
                     <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                     <input type="text" placeholder="  RECHERCHER">
@@ -71,10 +71,9 @@
                     <li><a href="luttes.html">LUTTES</a></li>
                     <li><a href="teams.html">ÉQUIPE</a></li>
                     <li><a href="news.html">NOUVELLES</a></li>
-                    <li><a href="#">À PROPOS</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">FAQ</a></li>
-                </ul>
+                    <li><a href="about.html">À PROPOS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                 <div class="buttons">
                     <button class="cta-button secondary">S'INFORMER</button>
                     <button class="cta-button">DONNER</button>
@@ -82,8 +81,8 @@
             </div>
         </div>
     </header>
-     <!-- Footer -->
-     <footer class="footer-wrapper">
+    <!-- Footer -->
+    <footer class="footer-wrapper">
         <div class="footer-wrapper__socialtree">
             <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
             <span class="text-logo" style="font-size: 30px; text-align: center">
@@ -99,13 +98,13 @@
         </div>
         <div>
             <ul class="footer-wrapper__links">
-                <li><a link="index.html">Accueil</a></li>
-                <li> <a link="luttes.html">Luttes</a></li>
-                <li><a link="teams.html">Équipe</a></li>
-                <li><a link="news.html">Nouvelles</a></li>
-                <li><a link="about.html">À Propos</a></li>
-                <li><a link="contact.html">Contant</a></li>
-                <li><a link="faq.html">FAQ</a></li>
+                <li><a href="/index.html">Accueil</a></li>
+                <li><a href="luttes.html">Luttes</a></li>
+                <li><a href="teams.html">Équipe</a></li>
+                <li><a href="news.html">Nouvelles</a></li>
+                <li><a href="about.html">À Propos</a></li>
+                <li><a href="contact.html">Contant</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
             <hr>
             <div class="footer-wrapper__legal">
@@ -131,17 +130,17 @@
     <footer>
         <h1>LDL et nos Partenaires</h1>
         <div class="footer-wrapper__partner">
-            <img src="sources/medias/partners/casifq.png" alt="casifq">
-            <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
-            <img src="sources/medias/partners/coalitionaidejuridique.png">
-            <img src="sources/medias/partners/fidh.jpg">
-            <img src="sources/medias/partners/iclmg-csilc.jpg">
-            <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
-            <img src="sources/medias/partners/osp.png">
-            <img src="sources/medias/partners/rodcd_logo.png">
-            <img src="sources/medias/partners/rqaca.png">
+            <img src="/sources/medias/partners/casifq.png" alt="casifq">
+            <img src="/sources/medias/partners/bdsquebec-logo-email.jpg">
+            <img src="/sources/medias/partners/coalitionaidejuridique.png">
+            <img src="/sources/medias/partners/fidh.jpg">
+            <img src="/sources/medias/partners/iclmg-csilc.jpg">
+            <img src="/sources/medias/partners/logo-echec-a-la-guerre-retin.png">
+            <img src="/sources/medias/partners/osp.png">
+            <img src="/sources/medias/partners/rodcd_logo.png">
+            <img src="/sources/medias/partners/rqaca.png">
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-    <script src="main.js"></script>
-    </body>
+    <script src="/main.js"></script>
+</body>
