make pages work

--- a/luttes.html
+++ b/luttes.html
@@ -51,6 +51,7 @@
 
         <nav class="navbar-bottom">
             <ul class="nav-links">
+                <li><a class="nav-link" href="index.html">ACCUEIL</a></li>
                 <li><a href="luttes.html">LUTTES</a></li>
                 <li><a href="teams.html">ÉQUIPE</a></li>
                 <li><a href="news.html">NOUVELLES</a></li>
@@ -68,6 +69,7 @@
                     <input type="text" placeholder="  RECHERCHER">
                 </div>
                 <ul class="nav-links">
+                    <li><a class="nav-link" href="index.html">ACCUEIL</a></li>
                     <li><a href="luttes.html">LUTTES</a></li>
                     <li><a href="teams.html">ÉQUIPE</a></li>
                     <li><a href="news.html">NOUVELLES</a></li>
