--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
 
         <nav class="navbar-bottom">
             <ul class="nav-links">
+                <li><a class="nav-link" href="index.html">ACCUEIL</a></li>
                 <li><a href="luttes.html">LUTTES</a></li>
                 <li><a href="teams.html">ÉQUIPE</a></li>
                 <li><a href="news.html">NOUVELLES</a></li>
