--- a/news.html
+++ b/news.html
@@ -51,6 +51,7 @@
 
         <nav class="navbar-bottom">
             <ul class="nav-links">
+                <li><a class="nav-link" href="index.html">ACCUEIL</a></li>
                 <li><a href="luttes.html">LUTTES</a></li>
                 <li><a href="teams.html">ÉQUIPE</a></li>
                 <li><a href="news.html">NOUVELLES</a></li>
@@ -68,11 +69,12 @@
                     <input type="text" placeholder="  RECHERCHER">
                 </div>
                 <ul class="nav-links">
+                    <li><a href="index.html">ACCUEIL</a></li>
                     <li><a href="luttes.html">LUTTES</a></li>
                     <li><a href="teams.html">ÉQUIPE</a></li>
                     <li><a href="news.html">NOUVELLES</a></li>
-                    <li><a href="#">À PROPOS</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="about.html">À PROPOS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                     <li><a href="#">FAQ</a></li>
                 </ul>
                 <div class="buttons">
