--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,21 @@
         </div>
     </header>
      <!-- Footer -->
-     <footer class="footer-wrapper">
+     <footer>
+        <h1>LDL et nos Partenaires</h1>
+        <div class="footer-wrapper__partner">
+            <img src="sources/medias/partners/casifq.png" alt="casifq">
+            <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
+            <img src="sources/medias/partners/coalitionaidejuridique.png">
+            <img src="sources/medias/partners/fidh.jpg">
+            <img src="sources/medias/partners/iclmg-csilc.jpg">
+            <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
+            <img src="sources/medias/partners/osp.png">
+            <img src="sources/medias/partners/rodcd_logo.png">
+            <img src="sources/medias/partners/rqaca.png">
+        </div>
+    </footer>
+    <footer class="footer-wrapper">
         <div class="footer-wrapper__socialtree">
             <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
             <span class="text-logo" style="font-size: 30px; text-align: center">
@@ -100,13 +114,13 @@
         </div>
         <div>
             <ul class="footer-wrapper__links">
-                <li><a link="index.html">Accueil</a></li>
-                <li> <a link="luttes.html">Luttes</a></li>
-                <li><a link="teams.html">Équipe</a></li>
-                <li><a link="news.html">Nouvelles</a></li>
-                <li><a link="about.html">À Propos</a></li>
-                <li><a link="contact.html">Contant</a></li>
-                <li><a link="faq.html">FAQ</a></li>
+                <li><a link="#">Accueil</a></li>
+                <li> <a link="#">Luttes</a></li>
+                <li><a link="#">Équipe</a></li>
+                <li><a link="#">Nouvelles</a></li>
+                <li><a link="#">À Propos</a></li>
+                <li><a link="#">Contant</a></li>
+                <li><a link="#">FAQ</a></li>
             </ul>
             <hr>
             <div class="footer-wrapper__legal">
@@ -129,20 +143,8 @@
             </div>
         </div>
     </footer>
-    <footer>
-        <h1>LDL et nos Partenaires</h1>
-        <div class="footer-wrapper__partner">
-            <img src="sources/medias/partners/casifq.png" alt="casifq">
-            <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
-            <img src="sources/medias/partners/coalitionaidejuridique.png">
-            <img src="sources/medias/partners/fidh.jpg">
-            <img src="sources/medias/partners/iclmg-csilc.jpg">
-            <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
-            <img src="sources/medias/partners/osp.png">
-            <img src="sources/medias/partners/rodcd_logo.png">
-            <img src="sources/medias/partners/rqaca.png">
-        </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="swiper.js" ></script>
+    <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
     </body>
