--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
               <div class="swiper-slide">
                 <div class =text>
                     <div class="fondnoir"></div>
-                    <div class="text1"> NOUS PROTÉGEONS VOS DROITS  </div>
+                    <div class="text1"><p> NOUS PROTÉGEONS VOS DROITS </p> </div>
                     <span>CIVILES</span>
                     <div class="text2">
                         DEPUIS 1963
                     </div>
                     <div class="boutonhero">
-                        <button>DONNER</button>
+                        <button class="swiper-button">DONNER</button>
                     </div>
                     
                 </div>
