--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </a>
             
         </div>
-            <button>Voir plus</button>
+            <button class="section-card__button">Voir plus</button>
     </section>
     <section style="background-color: white;">
         <h1>Nos luttes</h1>
