--- a/teams.html
+++ b/teams.html
@@ -144,6 +144,7 @@
             </div>
         </div>
     </footer>
+    <!-- Champ des scripts-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="swiper.js" ></script>
     <script src="https://kit.fontawesome.com/b6c9a53dc1.js" crossorigin="anonymous"></script>
