adding news to news page

--- a/news.html
+++ b/news.html
@@ -84,6 +84,26 @@
             </div>
         </div>
     </header>
+    <section class="news-wrapper"> 
+        <div class="news-wrapper__news">
+            <ul class="news-wrapper__list">
+                <li><p>Pinel: Les cas complexes crient au secours!</p></li>
+                <li><p>Pour l’interdiction des interpellations
+                    policières une bonne fois pour toute</p></li>
+                <li><p>États généraux de la fonction public du Québec</p></li>
+                <li><p>Le Canada doit stopper de façon urgente l’exportation 
+                    d’armes à destination d’Israël</p></li>
+                <li><p>Être en prison dans une prison</p></li>
+                <li><p>Les délais du regroupement familial au Québec : <br> Pourquoi sont-ils préjudiciables aux droits humains?</p></li>
+                    <li><p>Pour l’interdiction des interpellations
+                        policières une bonne fois pour toute</p></li>
+                    <li><p>Contre vents et marées : liens avec un proche incarcéré</p></li>
+                    <li><p>Le Canada doit stopper de façon urgente l’exportation 
+                        d’armes à destination d’Israël</p></li>
+            </ul>
+        </div>
+
+    </section>
      <!-- Footer -->
      <footer>
         <h1>LDL et nos Partenaires</h1>
