--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
             </a>
             
         </div>
+        <div class="cardbouton">
             <button class="section-card__button">Voir plus</button>
+
+        </div>
+           
     </section>
     <section style="background-color: white;">
         <h1>Nos luttes</h1>
