ajustements sections cartes et témoignages

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
     </section>
 
     <section>
-        <h1>À la une</h1>
-        <hr>
+        <h1 id="textcarte">À la une</h1>
+        <hr id="barrecarte">
         <div class="section-card">
             <a href="">
                 <article class="section-card__card">
@@ -201,8 +201,8 @@
         </div>
     </section>
     <section>
-        <h1>Témoignages</h1>
-        <hr>
+        <h1 id="texttemoi">Témoignages</h1>
+        <hr id="barretemoi">
         <div class="testimony-wrapper">
             <!--Témoignage 1-->
             <article class="testimony-wrapper__testimonial" id="left">
