ajout de la page nouvelle une seule nouvelle

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <h1 id="textcarte">À la une</h1>
         <hr id="barrecarte">
         <div class="section-card">
-            <a href="">
+            <a href="headline.html">
                 <article class="section-card__card">
                     <img src="sources/medias/nouvelle1.png" alt="nouvelle #1">
                     <div class="section-card__container">
