--- a/headline.html
+++ b/headline.html
@@ -85,17 +85,17 @@
         </div>
     </header>
     <div class="hero-image">
-        <div class="hero-image__text">
-            <h1>Pour l'interdiction des interpellations policières une bonne fois pour toute</h1>
-            <h4>La Ligue des droits et libertés salue ce jugement déterminant dans la lutte au profilage racial à
+        <div class="hero-image__text" name="text">
+            <h1>Pour l'interdiction des interpellations policières une bonne fois pour toute</h1><br>
+            <h3>La Ligue des droits et libertés salue ce jugement déterminant dans la lutte au profilage racial à
                 Montréal. Pour le respect des droits humains,<br> c’est maintenant à la Ville de Montréal d’agir en
-                interdisant les interpellations policières, une bonne fois pour toute!</h4>
+                interdisant les interpellations policières, une bonne fois pour toute!</h3>
 
         </div>
 
     </div>
     <section>
-        
+
     </section>
     <!-- Footer -->
     <footer>
