--- a/headline.html
+++ b/headline.html
@@ -92,10 +92,65 @@
                 interdisant les interpellations policières, une bonne fois pour toute!</h3>
 
         </div>
-
     </div>
-    <section>
+    <section class="headline-wrapper">
+        <h1>
+            La Ville de Montréal condamnée pour profilage racial systémique
+            Pour l’interdiction des interpellations policières une bonne fois pour toute
+        </h1>
+        <article>
+            <p> Montréal, le 4 septembre 2024 — La Ligue des droits et libertés (LDL) salue la décision rendue par la
+                juge
+                Dominique Poulin de la Cour supérieure ainsi que la démarche d’action collective intentée par la Ligue
+                des
+                Noirs du Québec et M. Alexandre Lamontagne pour faire valoir le droit à l’égalité et à la dignité des
+                personnes racisées et faire cesser les pratiques policières discriminatoires.</p>
+            <br>
+            <p> Le Tribunal conclut au caractère systémique du profilage racial à Montréal (par. 37) et déclare que la
+                Ville
+                « est elle-même fautive, en ce qu’elle contribue au profilage racial occasionné par sa procédure
+                d’interpellation » (par. 9). Le Tribunal affirme également que la Ville « contribue au phénomène du
+                profilage racial en demandant à ses policiers de faire de la prévention et de procéder à des
+                interpellations, dans un contexte de racisme systémique […] » (par. 11).</p>
+            <br>
 
+            <p> Par ailleurs, la pratique des interpellations au sein du Service de police de la Ville de Montréal
+                (SPVM) a
+                fait l’objet de deux récents rapports de recherche en 2019 et en 2023 (Armony et al.). Dans le second
+                rapport, rendu public en juin 2023 par le SPVM, les chercheur-euse-s formulent une seule et unique
+                recommandation rejetée du revers de la main par le directeur Fady Dagher : un moratoire sur les
+                interpellations.</p>
+
+            <br>
+            <p>
+
+                Depuis février 2023, la LDL et plus de 90 organisations exigent l’interdiction de cette pratique
+                arbitraire.
+
+            </p>
+            <br>
+            <br>
+            <p>
+                La LDL rappelle que les policiers n’ont pas le pouvoir au Québec de faire des interpellations en vertu
+                de la loi ou de la common law. Les interpellations policières bafouent les droits et libertés de toute
+                personne et sont une source connue et documentée de profilages racial et social systémiques. Les
+                populations autochtones, noires, racisées et en situation de marginalité sont visées de manière
+                disproportionnée par cette pratique qui porte atteinte à leur dignité.
+
+            </p>
+            <br>
+            <p>
+                « La Ligue des droits et libertés salue ce jugement déterminant dans la lutte au profilage racial
+                systémique à Montréal. Pour le respect des droits humains, c’est maintenant à la Ville de Montréal
+                d’agir en interdisant les interpellations policières, une bonne fois pour toute ! » déclare Lynda
+                Khelil, porte-parole de la LDL
+            </p>
+            <br>
+            <p>
+                La LDL exhorte la Ville de Montréal à ne pas faire appel de ce jugement et à y donner suite de façon
+                urgente en interdisant aux policiers du SPVM de faire des interpellations.
+            </p>
+        </article>
     </section>
     <!-- Footer -->
     <footer>
