--- a/headline.html
+++ b/headline.html
@@ -152,6 +152,14 @@
             </p>
         </article>
     </section>
+    <section class="pagination-wrapper">
+        <div class="pagination">
+            <button class="prev" aria-label="Previous">Previous</button>
+            <div class="divider"></div>
+            <button class="next" aria-label="Next">Next</button>
+        </div>
+
+    </section>
     <!-- Footer -->
     <footer>
         <h1>LDL et nos Partenaires</h1>
