--- a/news.html
+++ b/news.html
@@ -99,36 +99,36 @@
         </div>
         <ul class="news-wrapper__list">
             <li>
-                <p>Pinel: Les cas complexes crient au secours!</p>
+                <a href="https://liguedesdroits.ca/pinel-les-cas-complexes-crient-au-secours/">Pinel: Les cas complexes crient au secours!</a>
             </li>
             <li>
-                <p>Pour l’interdiction des interpellations
-                    policières une bonne fois pour toute</p>
+                <a href="https://liguedesdroits.ca/pour-linterdiction-des-interpellations-policieres-une-bonne-fois-pour-toute/" >Pour l’interdiction des interpellations
+                    policières une bonne fois pour toute</a>
             </li>
             <li>
-                <p>États généraux de la fonction public du Québec</p>
+                <a>États généraux de la fonction public du Québec</a>
             </li>
             <li>
-                <p>Le Canada doit stopper de façon urgente l’exportation
-                    d’armes à destination d’Israël</p>
+                <a>Le Canada doit stopper de façon urgente l’exportation
+                    d’armes à destination d’Israël</a>
             </li>
             <li>
-                <p>Être en prison dans une prison</p>
+                <a>Être en prison dans une prison</a>
             </li>
             <li>
-                <p>Les délais du regroupement familial au Québec : <br>Pourquoi sont-ils préjudiciables aux droits
-                    humains?</p>
+                <a>Les délais du regroupement familial au Québec : <br>Pourquoi sont-ils préjudiciables aux droits
+                    humains?</a>
             </li>
             <li>
-                <p>Pour l’interdiction des interpellations
-                    policières une bonne fois pour toute</p>
+                <a>Pour l’interdiction des interpellations
+                    policières une bonne fois pour toute</a>
             </li>
             <li>
-                <p>Contre vents et marées : liens avec un proche incarcéré</p>
+                <a>Contre vents et marées : liens avec un proche incarcéré</a>
             </li>
             <li>
-                <p>Le Canada doit stopper de façon urgente l’exportation
-                    d’armes à destination d’Israël</p>
+                <a>Le Canada doit stopper de façon urgente l’exportation
+                    d’armes à destination d’Israël</a>
             </li>
         </ul>
     </section>
