ajustement image fichier

--- a/luttes.html
+++ b/luttes.html
@@ -34,7 +34,7 @@
                 <input type="text" placeholder="  RECHERCHER">
             </div>
 
-            <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+            <img class="logo" src="medias/ldl-logo-horizontale-270.png" alt="logoldl">
 
             <div class="navbar-top__buttons">
                 <button class="cta-button secondary">S'INFORMER</button>
@@ -63,7 +63,7 @@
 
         <div class="mobile-menu-overlay">
             <div class="mobile-menu-content">
-                <img class="logo" src="./sources/medias/ldl-logo-horizontale-270.png" alt="logoldl">
+                <img class="logo" src="medias/ldl-logo-horizontale-270.png" alt="logoldl">
                 <div class="searchbar">
                     <i class="fa-solid fa-magnifying-glass fa-2x"></i>
                     <input type="text" placeholder="  RECHERCHER">
@@ -88,20 +88,20 @@
      <<footer>
         <h1>LDL et nos Partenaires</h1>
         <div class="footer-wrapper__partner">
-            <img src="sources/medias/partners/casifq.png" alt="casifq">
-            <img src="sources/medias/partners/bdsquebec-logo-email.jpg">
-            <img src="sources/medias/partners/coalitionaidejuridique.png">
-            <img src="sources/medias/partners/fidh.jpg">
-            <img src="sources/medias/partners/iclmg-csilc.jpg">
-            <img src="sources/medias/partners/logo-echec-a-la-guerre-retin.png">
-            <img src="sources/medias/partners/osp.png">
-            <img src="sources/medias/partners/rodcd_logo.png">
-            <img src="sources/medias/partners/rqaca.png">
+            <img src="medias/partners/casifq.png" alt="casifq">
+            <img src="medias/partners/bdsquebec-logo-email.jpg">
+            <img src="medias/partners/coalitionaidejuridique.png">
+            <img src="medias/partners/fidh.jpg">
+            <img src="medias/partners/iclmg-csilc.jpg">
+            <img src="medias/partners/logo-echec-a-la-guerre-retin.png">
+            <img src="medias/partners/osp.png">
+            <img src="medias/partners/rodcd_logo.png">
+            <img src="medias/partners/rqaca.png">
         </div>
     </footer>
     <footer class="footer-wrapper">
         <div class="footer-wrapper__socialtree">
-            <img class="footer-wrapper__logo" src="/sources/medias/ldl-icone.png">
+            <img class="footer-wrapper__logo" src="medias/ldl-icone.png">
             <span class="text-logo" style="font-size: 30px; text-align: center">
                 <p>Ligue des <br> <b>Droits</b> et <b>libertés</b></p>
             </span>
